syntax = "proto3";

import "google/protobuf/wrappers.proto";

option csharp_namespace = "User";

package user;

// The greeting service definition.
service Users {
  // Sends a greeting
  rpc GetById (GetByIdRequest) returns (GetByIdResponse);
}

// The request message containing the user's name.
message GetByIdRequest {
  string id = 1;
}

// The response message containing the greetings.
message GetByIdResponse {
  string id = 1;
  string name = 2;
  string email = 3;
  string number = 4;
  google.protobuf.StringValue description = 5;
  UserRole role = 6;
}

message UserRole {
  int32 id = 7;
  string name = 8;
}
